# mobile-kotlin/app/src/main/java/io/ycvk/acorn/api/models/AgentMessageData.kt
@@ -1,47 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-
-@file:Suppress(
-    "ArrayInDataClass",
-    "DuplicatedCode",
-    "EnumEntryName",
-    "RemoveRedundantQualifierName",
-    "RemoveRedundantCallsOfConversionMethods",
-    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
-    "RedundantUnitReturnType",
-    "RemoveEmptyClassBody",
-    "UnnecessaryVariable",
-    "UnusedImport",
-    "UnnecessaryVariable",
-    "unused"
-)
-
-package io.ycvk.acorn.api.models
-
-import io.ycvk.acorn.api.models.RunEventMessage
-
-import com.squareup.moshi.Json
-import com.squareup.moshi.JsonClass
-
-/**
- * 
- *
- * @param message 
- */
-
-
-data class AgentMessageData (
-
-    @Json(name = "message")
-    val message: RunEventMessage
-
-) {
-
-
-}
-
