# mobile-kotlin/app/src/main/java/io/ycvk/acorn/api/models/ClientAgentMessageEvent.kt
@@ -1,67 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-
-@file:Suppress(
-    "ArrayInDataClass",
-    "DuplicatedCode",
-    "EnumEntryName",
-    "RemoveRedundantQualifierName",
-    "RemoveRedundantCallsOfConversionMethods",
-    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
-    "RedundantUnitReturnType",
-    "RemoveEmptyClassBody",
-    "UnnecessaryVariable",
-    "UnusedImport",
-    "UnnecessaryVariable",
-    "unused"
-)
-
-package io.ycvk.acorn.api.models
-
-import io.ycvk.acorn.api.models.AgentMessageData
-
-import com.squareup.moshi.Json
-import com.squareup.moshi.JsonClass
-
-/**
- * 
- *
- * @param eventId 
- * @param runId 
- * @param seq 
- * @param ts 
- * @param type 
- * @param `data` 
- */
-
-
-data class ClientAgentMessageEvent (
-
-    @Json(name = "event_id")
-    val eventId: kotlin.String,
-
-    @Json(name = "run_id")
-    val runId: kotlin.String,
-
-    @Json(name = "seq")
-    val seq: kotlin.Long,
-
-    @Json(name = "ts")
-    val ts: java.time.OffsetDateTime,
-
-    @Json(name = "type")
-    val type: kotlin.Any?,
-
-    @Json(name = "data")
-    val `data`: AgentMessageData
-
-) {
-
-
-}
-
