# mobile-kotlin/app/src/main/java/io/ycvk/acorn/api/models/DecisionBlockedData.kt
@@ -1,54 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-
-@file:Suppress(
-    "ArrayInDataClass",
-    "DuplicatedCode",
-    "EnumEntryName",
-    "RemoveRedundantQualifierName",
-    "RemoveRedundantCallsOfConversionMethods",
-    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
-    "RedundantUnitReturnType",
-    "RemoveEmptyClassBody",
-    "UnnecessaryVariable",
-    "UnusedImport",
-    "UnnecessaryVariable",
-    "unused"
-)
-
-package io.ycvk.acorn.api.models
-
-
-import com.squareup.moshi.Json
-import com.squareup.moshi.JsonClass
-
-/**
- * 
- *
- * @param action 
- * @param decisionReason 
- * @param explicitSkillId 
- */
-
-
-data class DecisionBlockedData (
-
-    @Json(name = "action")
-    val action: kotlin.String? = null,
-
-    @Json(name = "decision_reason")
-    val decisionReason: kotlin.String? = null,
-
-    @Json(name = "explicit_skill_id")
-    val explicitSkillId: kotlin.String? = null
-
-) {
-
-
-}
-
