# mobile-kotlin/app/src/main/java/io/ycvk/acorn/api/models/RunEvent.kt
@@ -23,9 +23,7 @@
 
 package io.ycvk.acorn.api.models
 
-import io.ycvk.acorn.api.models.ClientAgentMessageEvent
 import io.ycvk.acorn.api.models.ClientAssistantDeltaEvent
-import io.ycvk.acorn.api.models.ClientDecisionBlockedEvent
 import io.ycvk.acorn.api.models.ClientElicitationDecidedEvent
 import io.ycvk.acorn.api.models.ClientElicitationPendingEvent
 import io.ycvk.acorn.api.models.ClientOperatorQuestionDecidedEvent
@@ -35,7 +33,7 @@ import io.ycvk.acorn.api.models.ClientRunFailedEvent
 import io.ycvk.acorn.api.models.ClientRunInterruptedEvent
 import io.ycvk.acorn.api.models.ClientRunResumeRequestedEvent
 import io.ycvk.acorn.api.models.ClientRunStartedEvent
-import io.ycvk.acorn.api.models.DecisionBlockedData
+import io.ycvk.acorn.api.models.OperatorQuestionData
 
 import com.squareup.moshi.Json
 import com.squareup.moshi.JsonClass
@@ -65,7 +63,7 @@ interface RunEvent {
     @Json(name = "type")
     val type: kotlin.Any?
     @Json(name = "data")
-    val `data`: DecisionBlockedData
+    val `data`: OperatorQuestionData
 
 }
 
